CJAL-12/10/2018- Se agrega mensages de validacion exitosos y avance al modulo caja general

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MVC.Presentacion.Models.Ventas.CajaGeneralModel
+﻿@model  MVC.Presentacion.Models.Ventas.VentaCorteAnticipoModel
 
 <!DOCTYPE html>
 
@@ -7,39 +7,11 @@
     @{
         ViewBag.Title = "Index";
     }
-    <style type="text/css">
-        .col-sm-05 {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16.666667%;
-            flex: 0 0 16.666667%;
-            max-width: 8.666667%;
-            text-align: center;
-        }
-
-        .col-sm-005 {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16.666667%;
-            flex: 0 0 16.666667%;
-            max-width: 10.666667%;
-            text-align: center;
-        }
-    </style>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#Chkboxcorrecto').click(function () {
-                if (!$(this).is(':checked')) {
-                    $("#btnLiquidar").prop("disabled", true);
-                }
-                else {
-                    $("#btnLiquidar").prop("disabled", false);
-                }
-
-            });
-    });
-    </script>
+    <script src="~/Resources/js/CajaGeneral.js"></script>
+    <link href="~/Resources/css/CreateForm.css" rel="stylesheet" />
 </head>
 <body style="height:100%">
-    @using (Html.BeginForm("Corte", "CajaGeneral", FormMethod.Post))
+    @using (Html.BeginForm("Estacion", "CajaGeneral", FormMethod.Post))
     {
         <section class="content home">
             <div class="container-fluid">
@@ -51,10 +23,10 @@
                                     <b>Clave Reporte:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    <input type="text" name="Clave" class="form-control" />
+                                    <input type="text" name="FolioOperacion" class="form-control" />
                                 </div>
                                 <div class="col-sm-2">
-                                    <input type="submit" value="Buscar" formmethod="post" class="btn btn-raised btn-primary float-left" />
+                                    <input type="submit" value="Buscar" formaction=@Url.Action("BuscarEstacion") formmethod="post" class="btn btn-raised btn-primary float-left" />
                                 </div>
                             </div>
                         </div>
@@ -67,7 +39,7 @@
                                     <b>Jefe de estaciones:</b>
                                 </div>
                                 <div class="col-sm-4">
-                                    @Html.LabelFor(model => model.OperadorChoferNombre, (string)((@ViewBag.CajaGeneral == null) ? "value" : @ViewBag.IdCliente[0].CajaGeneral), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.UsuarioRecibe, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].UsuarioRecibe), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-05">
                                     <b></b>
@@ -76,7 +48,7 @@
                                     <b>Fecha de reporte:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.Label("FechaReporte", "value", new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.FechaAplicacion, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].FechaAplicacion.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -85,7 +57,7 @@
                                     <b>Anticipos total:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.Label("AnticipoTotal", "value", new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : "$" + @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -108,17 +80,17 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @if (ViewBag.CajaGralEstacion != null)
+                                                @if (ViewBag.CajaGeneralEstacion != null)
                                                 {
-                                                    foreach (var item in ViewBag.CajaGralEstacion)
+                                                    foreach (var item in ViewBag.CajaGeneralEstacion)
                                                     {
-                                                        <tr>
-                                                            <td>@item.Anticipo</td>
-                                                            <td>@item.Concepto</td>
-                                                            <td>@item.Fecha</td>
-                                                            <td>@item.PuntoVenta</td>
-                                                            <td>@item.Monto</td>
-                                                        </tr>
+                                                <tr>
+                                                    <td>@item.FolioOperacion</td>
+                                                    <td>@item.TipoOperacion</td>
+                                                    <td>@item.FechaCorteAnticipo</td>
+                                                    <td>@item.PuntoVenta</td>
+                                                    <td>$@item.MontoRecortadoAnticipado</td>
+                                                </tr>
                                                     }
                                                 }
                                             </tbody>
@@ -129,7 +101,7 @@
                                             <b>Efectivo a recibir:</b>
                                         </div>
                                         <div class="col-sm-4">
-                                            <input type="text" name="Efectivo" class="form-control" />
+                                            @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
                                         </div>
                                     </div><br />
                                     <div class="row clearfix">
@@ -142,7 +114,7 @@
                                     </div><br />
                                     <div class="row clearfix">
                                         <div class="col-sm-7">
-                                            <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-right" />
+                                            @*<input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-right" />*@
                                         </div>
                                         <div class="col-sm-5">
                                             <input type="submit" id="btnLiquidar" disabled value="Liquidar Camioneta" formaction=@Url.Action("GuardarLiquidar") formmethod="post" class="btn btn-raised btn-primary float-right" />
@@ -151,36 +123,11 @@
                                 </div>
                             </div>
                         </div>
-                        @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
-                {
-
-                            <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                                 role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                                <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                                <span data-notify="icon"></span>
-                                <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                                <a href="#" target="_blank" data-notify="url"></a>
-                            </div>
-                        }
-                        @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                            <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                                 role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                                <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                                <span data-notify="icon"></span>
-                                <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                            </div>
-                        }
-
                     </div>
                 </div>
+            </div>
         </section>
     }
 
 </body>
-
-@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/Scripts/jquery-ui.js")
 </html>
