--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
@@ -5,42 +5,17 @@
     ViewBag.Title = "Catálogo / Gasera / Nueva";
 }
 
-
 <link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="~/Resources/js/Empresas.js"></script>
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-
-<script type="text/javascript">
-    $(function () {
-
-        $('select').on('change', function () {
-
-            if ($('#ddlPais').find('option:selected').text() != 'México')
-            {
-               $('#ddlEdo').parent().hide();
-                $('#txtEdoP').show();
-            }
-
-            if ($('#ddlPais').find('option:selected').text() == 'México' || $('#ddlPais').find('option:selected').text() == 'Seleccione') {
-                 $('#ddlEdo').parent().show();
-                $('#txtEdoP').hide();
-            }
-
-        });
-
-    });
-</script>
-
 <script type="text/javascript">
     $(document).ready(function () {
         $("#RegresaIndex").click(function () {
             var form = $(this).parent("form");
             form.attr('action', '<%= Url.RouteUrl(new { Controller = "Empresas", Action = "Index" }) %>');
             form.attr('method', 'post');
-
         });
-
     });
 
 </script>
@@ -308,7 +283,7 @@
                                         </label>
                                         <input type="text" name="CodigoPostal" id="txtCP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].CodigoPostal)" />
                                         @Html.ValidationMessageFor(m => m.CodigoPostal, "", new { @class = "alert-danger" })
-                                     </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -414,7 +389,6 @@
                     </div>
                 </div>
             </div>
-
             @if (ViewBag.MensajeError != null)
                 {
                 <div class="row clearfix">
@@ -433,10 +407,3 @@
         </div>
     </section>
 }
-<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.colVis.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.html5.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.print.min.js"></script>
-<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
