--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/CreateForm.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/CreateForm.css
@@ -6,6 +6,14 @@
     text-align: center;
 }
 
+.col-sm-005 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 16.666667%;
+    flex: 0 0 16.666667%;
+    max-width: 10.666667%;
+    text-align: center;
+}
+
 a.tip {
     text-decoration: none;
 }
