--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -7,39 +7,20 @@
     @{
         ViewBag.Title = "Index";
     }
-    <style type="text/css">
-        .col-sm-05 {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16.666667%;
-            flex: 0 0 16.666667%;
-            max-width: 8.666667%;
-            text-align: center;
-        }
-
-        .col-sm-005 {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16.666667%;
-            flex: 0 0 16.666667%;
-            max-width: 10.666667%;
-            text-align: center;
-        }
-    </style>
+    <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+    <script src="~/assets/js/pages/ui/notifications.js"></script>
+    <script src="~/Resources/js/CajaGeneral.js"></script>
+    <link href="~/Resources/css/CreateForm.css" rel="stylesheet" />
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('#Chkboxcorrecto').click(function () {
-                if (!$(this).is(':checked')) {
-                    $("#btnLiquidar").prop("disabled", true);
-                }
-                else {
-                    $("#btnLiquidar").prop("disabled", false);
-                }
-
-            });
-        });
+        var numReq = '@ViewBag.NumeroRequisicion';
+        if (numReq != '') {
+            $(window).on("load", showNotification('alert-success', numReq, 'top', 'center', '', ''));
+        }
     </script>
+
 </head>
 <body style="height:100%">
-    @using (Html.BeginForm("Corte", "CajaGeneral", FormMethod.Post))
+    @using (Html.BeginForm("GuardarLiquidar", "CajaGeneral", FormMethod.Post))
     {
         <section class="content home">
             <div class="container-fluid">
@@ -54,9 +35,7 @@
                                     <input type="text" name="FolioOperacionDia" class="form-control" />
                                 </div>
                                 <div class="col-sm-2">
-                                    @*<input type="submit" value="Buscar" formmethod="post" class="btn btn-raised btn-primary float-left" />*@
                                     <input type="submit" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary float-left" />
-
                                 </div>
                             </div>
                         </div>
@@ -68,9 +47,8 @@
                                 <div class="col-sm-1">
                                     <b>Operador:</b>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     @Html.LabelFor(model => model.OperadorChofer, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].OperadorChofer), new { @class = "form-control" })
-
                                 </div>
                                 <div class="col-sm-05">
                                     <b>Camioneta:</b>
@@ -78,11 +56,11 @@
                                 <div class="col-sm-2">
                                     @Html.LabelFor(model => model.PuntoVenta, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].PuntoVenta), new { @class = "form-control" })
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-005">
                                     <b>Fecha de reporte:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.LabelFor(model => model.FechaRegistro, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].FechaRegistro), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.FechaRegistro, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].FechaRegistro.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -91,25 +69,25 @@
                                     <b>Venta total:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.LabelFor(model => model.VentaTotal, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotal), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.VentaTotal, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotal.ToString()), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-005">
                                     <b>Venta en efectivo:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.LabelFor(model => model.VentaTotalContado, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotalContado), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.VentaTotalContado, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotalContado.ToString()), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-005">
                                     <b>Venta a crédito:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.LabelFor(model => model.VentaTotalCredito, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotalCredito), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.VentaTotalCredito, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotalCredito.ToString()), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-05">
                                     <b>Otras ventas:</b>
                                 </div>
                                 <div class="col-sm-05">
-                                    @Html.LabelFor(model => model.OtrasVentas, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].OtrasVentas), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.OtrasVentas, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].OtrasVentas.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -163,8 +141,8 @@
                                                     foreach (var item in ViewBag.CajaGeneralCamioneta)
                                                     {
                                                         <tr>
-                                                            <td>@item.OperadorChofer</td>
-                                                            <td>@item.OperadorChofer</td>
+                                                            <td>@item.FolioOperacionDia</td>
+                                                            <td>Contado</td>
                                                             <td>@item.Descuento</td>
                                                             <td>@item.Subtotal</td>
                                                             <td>@item.Iva</td>
@@ -180,7 +158,7 @@
                                             <b>Descuento:</b>
                                         </div>
                                         <div class="col-sm-4">
-                                            @Html.LabelFor(model => model.Descuento, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].Descuento), new { @class = "form-control" })
+                                            @Html.LabelFor(model => model.Descuento, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].Descuento.ToString()), new { @class = "form-control" })
                                         </div>
                                     </div><br />
                                     <div class="row clearfix">
@@ -188,7 +166,7 @@
                                             <b>Total:</b>
                                         </div>
                                         <div class="col-sm-4">
-                                            @Html.LabelFor(model => model.Total, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].Total), new { @class = "form-control" })
+                                            @Html.LabelFor(model => model.Total, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].Total.ToString()), new { @class = "form-control" })
                                         </div>
                                     </div><br />
                                     <div class="row clearfix">
@@ -196,7 +174,7 @@
                                             <b>Efectivo a recibir:</b>
                                         </div>
                                         <div class="col-sm-4">
-                                            @Html.LabelFor(model => model.EfectivoRecibido, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].EfectivoRecibido), new { @class = "form-control" })
+                                            @Html.LabelFor(model => model.VentaTotalContado, (string)((@ViewBag.CajaGeneralCamioneta == null) ? "value" : @ViewBag.CajaGeneralCamioneta[0].VentaTotalContado.ToString()), new { @class = "form-control" })
                                         </div>
                                     </div><br />
                                     <div class="row clearfix">
@@ -219,36 +197,10 @@
                             </div>
                         </div>
                     </div>
-                    @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
-                {
-
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                            <a href="#" target="_blank" data-notify="url"></a>
-                        </div>
-                    }
-                    @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                        </div>
-                    }
-
                 </div>
             </div>
         </section>
     }
 
 </body>
-
-@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/Scripts/jquery-ui.js")
 </html>
