--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -2,6 +2,7 @@
 @using PagedList.Mvc;
 @using PagedList;
 @model RequisicionesModel
+
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
 
@@ -17,14 +18,14 @@
         $(window).on("load", showNotification('alert-success', numReq, 'top', 'center', '', ''));
     }
 </script>
-    @using (Html.BeginForm("Requisicion", "Requisicion", FormMethod.Post))
-    {
-        <div class="page-loader-wrapper">
-            <div class="loader">
-                <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
-                <p>Espere por favor</p>
-            </div>
+@using (Html.BeginForm("Requisicion", "Requisicion", FormMethod.Post))
+{
+    <div class="page-loader-wrapper">
+        <div class="loader">
+            <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+            <p>Espere por favor</p>
         </div>
+    </div>
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
@@ -40,10 +41,10 @@
                         </div>
                     </div>
                     @*@if (ViewBag.Requisiciones != null)
-                    {*@
-                        <div onload="javascript: showNotification('alert-success', 'Proceso Exitoso', 'top', 'center', '', '');"></div>
-                     
-                    @*}*@                   
+                        {*@
+                    <div onload="javascript: showNotification('alert-success', 'Proceso Exitoso', 'top', 'center', '', '');"></div>
+
+                    @*}*@
                     <div class="row clearfix">
                         <div class="col-lg-12">
                             <div class="card">
@@ -69,65 +70,84 @@
                                             <input id="BtnNuevaReq" type="submit" onclick="location.href='@Url.Action("Requisicion", "Requisicion")'" value="Requisicion" class="btn btn-primary btn-round btn-block" />
                                         </div>
                                     </div>
-                                    <div class="row clearfix">
-                                        <div class="col-lg-3">
-                                            <label>Estatus</label>
-                                            <select id="estatus" class="form-control selectpicker show-tick" data-live-search="true">
-                                                @foreach (var lst in Model.Estatus)
-                                                {
-                                                    <option value="@lst.IdRequisicionEstatus">@lst.Estatus</option>
-                                                }
-                                            </select>
-                                            @*<asp:DropDownList CssClass="form-control show-tick" runat="server" ID="ddlFiltroEstatus" AutoPostBack="true">
-                                                </asp:DropDownList>*@
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <label>Fecha de registro</label>
-                                            <div class="form-group">
-                                                <div>
-                                                    @Html.EditorFor(model => model.FechaCreacionDe, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.FechaCreacionDe, "", new { @class = "text-danger" })
+                                    <div class="demo-masked-input">
+                                        <div class=" row clearfix">
+                                            <div class="col-lg-3">
+                                                <label>Estatus</label>
+                                                <select id="estatus" class="form-control selectpicker show-tick" data-live-search="true">
+                                                    @foreach (var lst in Model.Estatus)
+                                                    {
+                                                        <option value="@lst.IdRequisicionEstatus">@lst.Estatus</option>
+                                                    }
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-2">
+                                                <label>Fecha de registro</label>
+                                                <div class="form-group">
+                                                    <div>
+                                                        <div class="input-group">
+                                                            <span class="input-group-addon">
+                                                                <i class="zmdi zmdi-calendar"></i>
+                                                            </span>
+                                                            @Html.TextBoxFor(model => model.FechaCreacionDe, new { @class = "form-control date", @placeholder = "De:" })
+                                                        </div>
+                                                        @Html.ValidationMessageFor(model => model.FechaCreacionDe, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
                                             </div>
+                                            <div class="col-lg-2">
+                                                <label>&nbsp; </label>
+                                                <div class="form-group">
+                                                    <div>
+                                                        <div class="input-group">
+                                                            <span class="input-group-addon">
+                                                                <i class="zmdi zmdi-calendar"></i>
+                                                            </span>
+                                                            @Html.TextBoxFor(model => model.FechaCreacionA, new { @class = "form-control date", @placeholder = "A:" })
+                                                        </div>
+                                                        @Html.ValidationMessageFor(model => model.FechaCreacionA, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
 
-                                            @*<dtp:DateTimePicker ID="dtpFechaRegiistrDe" CssClass="dataTxt" />*@
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <label>&nbsp; </label>
-                                            <div class="form-group">
-                                                <div>
-                                                    @Html.EditorFor(model => model.FechaCreacionA, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.FechaCreacionA, "", new { @class = "text-danger" })
-                                                </div>
                                             </div>
-                                            @*<dtp:DateTimePicker ID="dtpFechaRegiistrA" CssClass="dataTxt" />*@
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <label>Fecha de requisición</label>
-                                            <div class="form-group">
-                                                <div>
-                                                    @Html.EditorFor(model => model.FechaRequeridaDe, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.FechaRequeridaDe, "", new { @class = "text-danger" })
+                                            <div class="col-lg-2">
+                                                <label>Fecha de requisición</label>
+                                                <div class="form-group">
+                                                    <div>
+                                                        <div class="input-group">
+                                                            <span class="input-group-addon">
+                                                                <i class="zmdi zmdi-calendar"></i>
+                                                            </span>
+                                                            @Html.TextBoxFor(model => model.FechaRequeridaDe, new { @class = "form-control date", @placeholder = "De:" })
+                                                        </div>
+                                                        @Html.ValidationMessageFor(model => model.FechaRequeridaDe, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
+                                                @*<dtp:DateTimePicker ID="dtpFechaRequisicionDe" CssClass="dataTxt" />*@
                                             </div>
-                                            @*<dtp:DateTimePicker ID="dtpFechaRequisicionDe" CssClass="dataTxt" />*@
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <label>&nbsp; </label>
-                                            <div class="form-group">
-                                                <div>
-                                                    @Html.EditorFor(model => model.FechaRequeridaA, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.FechaRequeridaA, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-                                            @*<dtp:DateTimePicker ID="dtpFechaRequisicionA" CssClass="dataTxt" />*@
+                                            <div class="col-lg-2">
+                                                <label>&nbsp; </label>
+                                                <div class="form-group">
+                                                    <div>
+                                                        <div class="input-group">
+                                                            <span class="input-group-addon">
+                                                                <i class="zmdi zmdi-calendar"></i>
+                                                            </span>
 
-                                        </div>
-                                        <div class="col-lg-1">
-                                            <button class="btn btn-primary btn-round btn-block text-center" OnClick="btnBuscar_Click">
-                                                <i class="material-icons">search</i>
-                                                <span class="icon-name"></span>
-                                            </button>
+                                                            @Html.TextBoxFor(model => model.FechaRequeridaA, new { @class = "form-control", @placeholder = "A:" })
+                                                        </div>
+                                                        @Html.ValidationMessageFor(model => model.FechaRequeridaA, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+                                                @*<dtp:DateTimePicker ID="dtpFechaRequisicionA" CssClass="dataTxt" />*@
+
+                                            </div>
+                                            <div class="col-lg-1">
+                                                <button class="btn btn-primary btn-round btn-block text-center" OnClick="btnBuscar_Click">
+                                                    <i class="material-icons">search</i>
+                                                    <span class="icon-name"></span>
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row clearfix blockquote blockquote-info btn-round">
@@ -199,10 +219,5 @@
             </div>
         </section>
 
-    }
-
-
-
-
-
+}
 
